# metosim

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  pyproject.toml  railway.toml  requirements-api.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml
api/: Dockerfile  railway.toml
api/app/: main.py
api/app/db/: base.py  job_repo.py
api/app/middleware/: auth.py  logging.py
api/app/models/: job.py  simulation.py
api/app/routers/: health.py  results.py  simulations.py
api/app/services/: auth_service.py  job_service.py
api/tests/integration/: test_api_e2e.py
api/tests/unit/: test_routers.py  test_services.py
docs/: README.md  landing-page.html
docs/api_reference/: README.md  sdk_reference.md
docs/architecture/: README.md
docs/tutorials/: user_manual.md
engine/: Dockerfile
engine/metosim_engine/: __init__.py  runner.py
engine/metosim_engine/io/: hdf5_writer.py
engine/metosim_engine/materials/: catalog.py
engine/metosim_engine/mesh/: mesher.py
engine/metosim_engine/solvers/: fdtd.py  fem.py  rcwa.py
engine/tests/integration/: test_solver_e2e.py
engine/tests/unit/: test_fdtd.py  test_mesh.py
infra/: docker-compose.yml
landing/: Dockerfile  nginx.conf
sdk/metosim/: __init__.py  client.py  config.py  exceptions.py  job.py  materials.py  simulation.py  visualization.py
sdk/tests/integration/: test_sdk_api.py
sdk/tests/unit/: test_job.py  test_materials.py  test_simulation.py  test_visualization.py
