[metadata]
name = metosim
version = attr: sdk.metosim.__version__
description = Cloud-native meta-optics simulation platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metosim/metosim
author = Dr. Abhishek Kumar
author_email = abhishek@metosim.io

[options]
packages = find:
python_requires = >=3.9,<3.13
install_requires =
    pydantic>=2.0,<3.0
    httpx>=0.25.0
    numpy>=1.20.0
    h5py>=3.7.0
    matplotlib>=3.4.0
    rich>=13.0.0
    tenacity>=8.0.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-asyncio>=0.21
    black>=23.0
    isort>=5.12
    ruff>=0.1.0
    mypy>=1.5
    pre-commit>=3.0
api =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    sqlalchemy[asyncio]>=2.0
    asyncpg>=0.28.0
    alembic>=1.12.0
    celery[redis]>=5.3.0
    redis>=5.0.0
    boto3>=1.28.0
    python-jose>=3.3.0
    passlib[bcrypt]>=1.7.4
engine =
    jax>=0.4.0
    jaxlib>=0.4.0
    scipy>=1.7.0

[options.packages.find]
include = sdk/metosim*
